--- a/GVS/GVS.csproj
+++ b/GVS/GVS.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\Instances\DevTroop.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="IO\GameIO.cs" />
     <Compile Include="Loop.cs" />
@@ -58,6 +59,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rand.cs" />
     <Compile Include="Screen.cs" />
+    <Compile Include="Screens\GameScreen.cs" />
+    <Compile Include="Screens\ScreenManager.cs" />
+    <Compile Include="Sprites\AnimatedSprite.cs" />
     <Compile Include="Sprites\Sprite.cs" />
     <Compile Include="Sprites\SpriteUtils.cs" />
     <Compile Include="Extensions.cs" />
