--- a/GVS/packages.config
+++ b/GVS/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GeonBit.UI" version="3.4.0.1" targetFramework="net48" />
+  <package id="Lidgren.Network" version="1.0.2" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="SharpNoise" version="0.12.1.1" targetFramework="net48" />
 </packages>
