--- a/GVS/GVS.csproj
+++ b/GVS/GVS.csproj
@@ -15,6 +15,8 @@
     <MonoGamePlatform>Windows</MonoGamePlatform>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -66,6 +68,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rand.cs" />
+    <Compile Include="Reflection\ClassExtractor.cs" />
     <Compile Include="Screen.cs" />
     <Compile Include="Screens\GameScreen.cs" />
     <Compile Include="Screens\Instances\ConnectScreen.cs" />
