Adding some more in-game UI.

--- a/GVS/GVS.csproj
+++ b/GVS/GVS.csproj
@@ -709,6 +709,7 @@
     <None Include="Content\GeonBit.UI\themes\lowres\fonts\Italic.spritefont" />
     <None Include="Content\GeonBit.UI\themes\lowres\fonts\Regular.spritefont" />
     <None Include="packages.config" />
+    <Compile Include="Screens\Instances\PlayScreen.UI.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
